$Author$ $Rev$
$Date$

Revision history for Perl extension Apache::Gallery.

1.1 Sun Aug  5 23:48:30 BST 2012

	- Added HTML 5 video support
	- Added maps, using EXIF geographical data
	- New "modern" theme, using cover images and maps
	- Minor updates to existing themes
	- Produce album covers (thumbnails using four images from the
	  album) (Matt Blissett)
	- Moved code to Github <https://github.com/MattBlissett/Apache-Gallery>
	  (Matt Blissett)

1.0.2 Wed Jun  8 20:47:16 CEST 2011

	- Extended GalleryUnderscoresToSpaces to filenames as well.
	  (Debian bug #348724, Francesco Potortì)
	- Added txt to GalleryDocFile, the code in Gallery.pm already
	  allowed it.  (Luca Capello)
	- Added text-html.png and text-txt.png icons.
	  (Debian bug #423004, Luca Capello)
	- Fixed counter typo for <directory>.folder in next directory
	  menu item.  (Luca Capello)
	- Added support to ignore items through <directory|file>.ignore.
 	  (Debian bug #619625, Luca Capello)
	- Fixed spelling typos in Gallery.pm and README.  (Luca Capello)
	- GalleryCacheDir defaults to /var/cache/www/ per the FHS-2.3.
	  (Debian bug #337197, Luca Capello)
	- Fixed two minor POD errors (Michael Legart)

1.0.1 Wed Feb 23 20:45:38 CET 2011

	- Added missing template files to MANIFEST

1.0 Tue Feb 22 21:54:31 CET 2011

	- Handle files that match both GalleryDocFile and GalleryImgFile
	  correctly. (Claus Faerber)
	- Only respond to HEAD and GET requests, enabling users to use
	  WebDAV for upload (Andreas Plesner)
	- Added new option GalleryCommentExifKey to get comments from
	  EXIF data (Michael Legart)
	- Added new option GalleryEnableMediaRss to enable generation of
	  a media RSS feed for each directory listing. This works with
	  e.g. the plugin from http://piclens.com to enable 3D viewing
	  of your gallery. (Michael Legart)
	- Make browser-caching work with mod_perl 2. Supports If-None-Match
	  and If-Modified-Since headers. Sets Last-Modified-Date and
	  ETag headers. (Michael Legart)
