@@ -3,3 +3,4 @@ Makefile
 Makefile.old
 MYMETA.yml
 pm_to_blib
+*.tar.gz
